Increase MexPermSize for container TCK